Adding Auth - Design Fixes

--- a/.template.env
+++ b/.template.env
@@ -4,5 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-ATABASE_URL="postgresql://postgres.ctkihqqpwsmwdhlextvg:[PASSWORD]@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
+DATABASE_URL="postgresql://postgres.ctkihqqpwsmwdhlextvg:[PASSWORD]@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
+BETTER_AUTH_SECRET=bJuoPJN0fBK98lVYVNkFgvkjBVOybt3R
+DOMAIN="http://localhost:3000
 
