--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@tanstack/react-query": "^5.69.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "adhan": "^4.4.3",
     "autoprefixer": "^10.4.20",
     "better-auth": "^1.2.3",
     "class-variance-authority": "^0.7.1",
