--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "framer-motion": "^12.5.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "moment": "^2.30.1",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
