--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "prisma generate && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -45,16 +45,19 @@
     "@tanstack/react-query": "^5.69.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "adhan": "^4.4.3",
     "autoprefixer": "^10.4.20",
     "better-auth": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.5.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "moment": "^2.30.1",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
