--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "moment": "^2.30.1",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "papaparse": "^5.5.2",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
