--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.5.0",
+    "googleapis": "^148.0.0",
     "input-otp": "1.4.1",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.454.0",
