Added Event Flyer / Tv Flyer Implementation + Uploadthing integration
Also changed some ui

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@tiptap/starter-kit": "^2.11.9",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@uploadthing/react": "^7.3.0",
     "adhan": "^4.4.3",
     "autoprefixer": "^10.4.20",
     "better-auth": "^1.2.3",
@@ -88,6 +89,7 @@
     "stripe": "^17.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.6.0",
     "uuid": "^11.1.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.2",
