--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@better-auth/stripe": "^1.2.5",
+    "@better-auth/stripe": "^1.2.7",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@fullcalendar/core": "^6.1.17",
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/interaction": "^6.1.17",
@@ -63,10 +67,11 @@
     "@tiptap/starter-kit": "^2.11.9",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@uiw/react-md-editor": "^4.0.6",
     "@uploadthing/react": "^7.3.0",
     "adhan": "^4.4.3",
     "autoprefixer": "^10.4.20",
-    "better-auth": "^1.2.3",
+    "better-auth": "^1.2.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -83,6 +88,7 @@
     "next-themes": "^0.4.4",
     "papaparse": "^5.5.2",
     "react": "^19",
+    "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
