--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-v0-project",
+  "name": "mizan-management-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@better-auth/stripe": "^1.2.7",
+    "@bprogress/next": "^3.2.12",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -34,7 +35,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-menubar": "^1.1.4",
     "@radix-ui/react-navigation-menu": "^1.2.3",
-    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "latest",
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-scroll-area": "^1.2.2",
@@ -65,6 +66,7 @@
     "@tiptap/pm": "^2.11.9",
     "@tiptap/react": "^2.11.9",
     "@tiptap/starter-kit": "^2.11.9",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@uiw/react-md-editor": "^4.0.6",
@@ -81,11 +83,14 @@
     "framer-motion": "^12.5.0",
     "googleapis": "^148.0.0",
     "input-otp": "1.4.1",
+    "link-check": "^5.4.0",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.454.0",
     "moment": "^2.30.1",
     "next": "15.2.4",
+    "next-nprogress-bar": "^2.4.7",
     "next-themes": "^0.4.4",
+    "nprogress": "^0.2.0",
     "papaparse": "^5.5.2",
     "react": "^19",
     "react-beautiful-dnd": "^13.1.1",
@@ -95,10 +100,11 @@
     "react-medium-image-zoom": "^5.2.14",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "resend": "^4.5.1",
     "sonner": "^1.7.1",
     "square": "^42.0.0",
     "stripe": "^17.7.0",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.6.0",
     "uuid": "^11.1.0",
