--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@easypost/api": "^8.1.0",
     "@fullcalendar/core": "^6.1.17",
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/interaction": "^6.1.17",
@@ -80,17 +81,21 @@
     "date-fns": "4.1.0",
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "8.5.1",
+    "esbuild": "^0.25.5",
     "framer-motion": "^12.5.0",
     "googleapis": "^148.0.0",
     "input-otp": "1.4.1",
     "link-check": "^5.4.0",
+    "liquid-glass-react": "^1.1.1",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.454.0",
     "moment": "^2.30.1",
+    "monaco-editor": "^0.52.2",
     "next": "15.2.4",
     "next-nprogress-bar": "^2.4.7",
     "next-themes": "^0.4.4",
     "nprogress": "^0.2.0",
+    "openai": "^5.5.1",
     "papaparse": "^5.5.2",
     "react": "^19",
     "react-beautiful-dnd": "^13.1.1",
@@ -98,6 +103,7 @@
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-medium-image-zoom": "^5.2.14",
+    "react-monaco-editor": "^0.58.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "resend": "^4.5.1",
