--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@tiptap/pm": "^2.11.9",
     "@tiptap/react": "^2.11.9",
     "@tiptap/starter-kit": "^2.11.9",
+    "@types/moment-timezone": "^0.5.13",
     "@types/nprogress": "^0.2.3",
     "@types/react": "latest",
     "@types/react-dom": "latest",
@@ -90,6 +91,7 @@
     "lowlight": "^3.3.0",
     "lucide-react": "^0.454.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "monaco-editor": "^0.52.2",
     "next": "15.2.4",
     "next-nprogress-bar": "^2.4.7",
