--- a/.template.env
+++ b/.template.env
@@ -6,5 +6,6 @@
 
 DATABASE_URL="postgresql://postgres.ctkihqqpwsmwdhlextvg:[PASSWORD]@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
 BETTER_AUTH_SECRET=bJuoPJN0fBK98lVYVNkFgvkjBVOybt3R
-DOMAIN="http://localhost:3000
+DOMAIN="http://localhost:3000"
+NEXT_PUBLIC_WS_URL="ws://localhost:3000"
 
