--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.3",
   "private": true,
   "scripts": {
-    "dev": "prisma generate && next dev",
+    "dev": "prisma generate && tsx server.ts",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production tsx server.ts",
     "lint": "next lint"
   },
   "dependencies": {
@@ -21,35 +21,36 @@
     "@fullcalendar/interaction": "^6.1.17",
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
-    "@hookform/resolvers": "^3.9.1",
+    "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^6.5.0",
-    "@radix-ui/react-accordion": "^1.2.2",
-    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-collapsible": "^1.1.2",
-    "@radix-ui/react-context-menu": "^2.2.4",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-hover-card": "^1.1.4",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-menubar": "^1.1.4",
-    "@radix-ui/react-navigation-menu": "^1.2.3",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-progress": "latest",
-    "@radix-ui/react-radio-group": "^1.2.2",
-    "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slider": "^1.2.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.4",
-    "@radix-ui/react-toggle": "^1.1.1",
-    "@radix-ui/react-toggle-group": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-command": "^0.2.1",
+    "@radix-ui/react-context-menu": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@square/web-sdk": "^2.1.0",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.0.0",
@@ -69,55 +70,59 @@
     "@tiptap/starter-kit": "^2.11.9",
     "@types/moment-timezone": "^0.5.13",
     "@types/nprogress": "^0.2.3",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/ws": "^8.18.1",
     "@uiw/react-md-editor": "^4.0.6",
     "@uploadthing/react": "^7.3.0",
     "adhan": "^4.4.3",
     "autoprefixer": "^10.4.20",
     "better-auth": "^1.2.7",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
+    "date-fns": "^3.0.6",
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "8.5.1",
     "esbuild": "^0.25.5",
-    "framer-motion": "^12.5.0",
+    "framer-motion": "^11.0.3",
     "googleapis": "^148.0.0",
     "input-otp": "1.4.1",
     "link-check": "^5.4.0",
     "liquid-glass-react": "^1.1.1",
     "lowlight": "^3.3.0",
-    "lucide-react": "^0.454.0",
+    "lucide-react": "^0.344.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
     "monaco-editor": "^0.52.2",
-    "next": "15.2.4",
+    "next": "15.3.3",
     "next-nprogress-bar": "^2.4.7",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.3.0",
     "nprogress": "^0.2.0",
     "openai": "^5.5.1",
     "papaparse": "^5.5.2",
-    "react": "^19",
+    "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^19",
-    "react-hook-form": "^7.54.1",
+    "react-day-picker": "^8.10.0",
+    "react-dom": "^18",
+    "react-hook-form": "^7.50.1",
     "react-medium-image-zoom": "^5.2.14",
     "react-monaco-editor": "^0.58.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "resend": "^4.5.1",
-    "sonner": "^1.7.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "sonner": "^1.4.0",
     "square": "^42.0.0",
     "stripe": "^17.7.0",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^7.6.0",
+    "uploadthing": "^6.4.1",
     "uuid": "^11.1.0",
     "vaul": "^0.9.6",
-    "zod": "^3.24.2",
+    "ws": "^8.18.3",
+    "zod": "^3.22.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -127,6 +132,8 @@
     "postcss": "^8",
     "prisma": "^6.5.0",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
