--- a/.npmrc
+++ b/.npmrc
@@ -1,9 +1,8 @@
-# Use existing lockfile
-package-lock=false
-shamefully-hoist=true
-
 # Ignore peer dependency warnings during build
 legacy-peer-deps=true
 
 # Ensure consistent installs
-save-exact=true 
+save-exact=true
+
+# Use npm's default behavior
+package-lock=true 
