--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "8.5.1",
     "esbuild": "^0.25.5",
+    "eslint": "9.38.0",
     "framer-motion": "^11.0.3",
     "googleapis": "^148.0.0",
     "input-otp": "1.4.1",
